--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "yellowbus",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "tsx src/server.ts",
+    "start": "node dist/server.js",
     "build": "tsc",
     "dev": "tsx watch --env-file .env src/server.ts"
   },
