--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^5.14.0",
     "fastify": "^4.27.0",
     "fastify-type-provider-zod": "^1.2.0",
+    "vercel": "^34.2.7",
     "zod": "^3.23.8"
   }
 }
