--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "./src/server.ts", "use": "@vercel/node" }
+    { "src": "./dist/server.js", "use": "@now/node" }
   ],
   "routes": [
-    { "src": "./src/(.*)", "dest": "/" }
+    { "src": "/(.*)", "dest": "/dist/server.js" }
   ]
 }
