--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES6",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "module": "CommonJS",                                /* Specify what module code is generated. */
+    "target": "ESNext",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "module": "ESNext",                                /* Specify what module code is generated. */
     "moduleResolution": "Node",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     "rootDir": "./src",                                   /* Allow multiple folders to be treated as one when resolving modules. */
     "outDir": "./dist",                                   /* Specify an output folder for all emitted files. */
